# DecorDazzleHub

./: .pylintrc  README.md  admin_sqlite.txt  commands.md  requirements.txt
app/: db.sqlite3  manage.py  pyproject.toml
app/app/: asgi.py  settings.py  urls.py  wsgi.py
app/carts/: admin.py  apps.py  models.py  tests.py  urls.py  utils.py  views.py
app/carts/migrations/: 0001_initial.py  0002_alter_cart_options_alter_cart_created_timestamp_and_more.py  0003_alter_cart_options.py
app/carts/templatetags/: __init__.py  carts_tags.py
app/fixtures/goods/: categories.json  cats.json  prod.json  products.json
app/goods/: admin.py  apps.py  goods_list.json  models.py  tests.py  urls.py  utils.py  views.py
app/goods/migrations/: 0001_initial.py  0002_alter_categories_options_alter_categories_name_and_more.py  0003_alter_product_options.py
app/goods/templates/goods/: catalog.html  product.html
app/goods/templatetags/: goods_tags.py
app/main/: admin.py  apps.py  models.py  urls.py  views.py
app/main/templates/main/: about.html  base.html  index.html
app/orders/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
app/orders/migrations/: 0001_initial.py
app/templates/: base.html
app/templates/goods/: catalog.html  product.html
app/templates/includes/: cart_button.html  included_cart.html  notifications.html
app/templates/main/: about.html  index.html
app/templates/orders/: create_order.html
app/templates/users/: login.html  profile.html  registration.html  users_cart.html
app/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
app/users/migrations/: 0001_initial.py  0002_user_phone_number.py
templates/: index.html
templates/goods/: catalog.html
templates/other_files/: 404.html  500.html
